fixed flex-wrap on home page

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -5,25 +5,28 @@
 .media {
 	display: flex;
 	display: -webkit-flex;
-    display: -ms-flexbox;
-    
-    align-items: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
+	display: -ms-flexbox;
+	
+	align-items: center;
+	-webkit-align-items: center;
+	-ms-flex-align: center;
+	
+	flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
 }
 
 .media_figure {
 	flex-shrink: 0;
 	-webkit-flex-shrink: 0;
-    -ms-flex-negative: 0;
-    margin-right: .75rem;
+	-ms-flex-negative: 0;
+	margin-right: .75rem;
 }
 
 .media_body {
 	flex: 1;
 	-webkit-flex: 1;
-    -ms-flex: 1;
-    min-width: 0;
+	-ms-flex: 1;
+	min-width: 0;
 }
 
 .avatar {
@@ -34,12 +37,12 @@
  * Alignment
  */
 .center {
-    text-align: center;
+	text-align: center;
 }
 
 /**
  * Post
  */
 .banner {
-    text-align: center;
+	text-align: center;
 }
